<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">aplayer</string>
    <string name="action_settings">Settings</string>
    <string name="prefCarMode">prefCarMode</string>
    <string name="prefMagicEye">prefMagicEye</string>
    <string name="prefClick">prefClick</string>
    <string name="prefTest">prefTest</string>
    <string name="prefNoCompr">prefNoCompr</string>
    <string name="prefPlus10">prefPlus10</string>
    <string name="title_activity_preferences">Настройки</string>

</resources>