<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

        <CheckBoxPreference
            android:key="@string/prefCarMode"
            android:title="Car mode" />
        <CheckBoxPreference
            android:key="@string/prefMagicEye"
            android:title="Magic Eye" />
        <CheckBoxPreference
            android:key="@string/prefClick"
            android:title="Sounds" />
        <CheckBoxPreference
            android:key="@string/prefTest"
            android:title="Test" />
        <CheckBoxPreference
            android:key="@string/prefNoCompr"
            android:title="No compession" />
        <CheckBoxPreference
            android:key="@string/prefPlus10"
            android:title="Plus10" />
        
</PreferenceScreen>